Finally finished adding swagger documentation for each microservice + added more error handling wich are included in the documentation
